--- a/index.html
+++ b/index.html
@@ -20,31 +20,35 @@
     }
   </style>
 </head>
-<body aria-label="Reproduciendo audio de bienvenida y redirigiendo a sitio turístico">
+<body aria-label="Iniciando audio y redirigiendo automáticamente al sitio turístico">
 
-  <p>🔊 Iniciando guía sonora... un momento por favor.</p>
+  <p>🎧 Iniciando guía sonora... Por favor espera un momento.</p>
 
   <script>
     window.onload = () => {
-      // Vibración en Android
       if (navigator.vibrate) navigator.vibrate([150, 100, 150]);
 
-      // Crear objeto de audio
       const audio = new Audio("https://willy-sh.github.io/codigos-que-hablan/AudioTurismo.mp3");
+      audio.preload = "auto";
       audio.volume = 1.0;
-      audio.autoplay = true;
 
-      // Intentar reproducir inmediatamente
-      audio.play().then(() => {
-        // Redirigir después de 1 segundo desde que empieza el audio
-        setTimeout(() => {
+      // Esperar a que esté listo para reproducir
+      audio.addEventListener("canplaythrough", () => {
+        audio.play().then(() => {
+          // Reproducir 1 segundo antes de redirigir
+          setTimeout(() => {
+            window.location.href = "https://visitasanluispotosi.com/estado/";
+          }, 1000);
+        }).catch((err) => {
+          console.warn("No se pudo reproducir:", err);
           window.location.href = "https://visitasanluispotosi.com/estado/";
-        }, 1000);
-      }).catch((err) => {
-        // Si falla, redirige igual (por ejemplo, en iOS sin interacción)
-        console.warn("Error al reproducir audio automático:", err);
-        window.location.href = "https://visitasanluispotosi.com/estado/";
+        });
       });
+
+      // Fallback: si no carga en 3s, redirige igual
+      setTimeout(() => {
+        window.location.href = "https://visitasanluispotosi.com/estado/";
+      }, 3000);
     };
   </script>
 
