--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
 <body aria-label="Guía sonora de San Luis Potosí. El audio se está reproduciendo.">
 
   <p>🔊 Bienvenido a la guía sonora de San Luis Potosí</p>
-  <p>🌐 Sitio oficial disponible en segundo plano</p>
+  <p>🌐 Puedes acceder al sitio oficial si lo necesitas</p>
 
-  <!-- Audio real -->
   <audio autoplay>
     <source src="https://willy-sh.github.io/codigos-que-hablan/AudioTurismo.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
   </audio>
 
-  <!-- Enlace oculto para abrir el sitio oficial si alguien lo requiere -->
   <a class="oculto" href="https://visitasanluispotosi.com/estado/" target="_blank" rel="noopener">Abrir sitio oficial</a>
 
 </body>
