--- a/index5.html
+++ b/index5.html
@@ -94,7 +94,7 @@
   </div>
 
   <footer>
-    &copy; 2025 - Códigos que Hablan
+    &copy; 2025 - Códigos que Hablan - Secretaría de Turismo
   </footer>
 </body>
 </html>
