--- a/index8.html
+++ b/index8.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Tierra Nueva, Pueblo Mágico de San Luis Potosí - Códigos que Hablan</title>
+  <title>Tierra Nueva - Códigos que Hablan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { margin: 0; font-family: "Georgia", serif; background-color: #f0f9f0; color: #1e3d1e; }
