--- a/index8.html
+++ b/index8.html
@@ -33,7 +33,7 @@
     overlay.addEventListener("click", playAudio, { once: true });
   </script>
   <header>
-    <h1>Tierra Nueva, Pueblo Mágico de San Luis Potosí</h1>
+    <h1>Tierra Nueva</h1>
     <p>Proyecto inclusivo: Códigos que Hablan</p>
   </header>
   <div class="contenido">
