--- a/index9.html
+++ b/index9.html
@@ -13,7 +13,7 @@
     .contenido img { max-width: 100%; border-radius: 8px; margin: 1.5rem 0; display: block; }
     .contenido h2 { font-size: 1.5rem; color: #2a5d2a; margin-top: 2rem; }
     .contenido p { line-height: 1.6; 
-                 text-aligin : justify;}
+                 text-align : justify;}
     footer { background: #1c3b1c; color: white; text-align: center; padding: 1rem; }
     #touchOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 9999; }
   </style>
